[metadata]
name = jambottle
version = 1.0.0
description = A bot that announces new itch.io jam entries to a discord channel
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment
    Topic :: Software Development
keywords = game, space, simulator
project_urls =
    Source=https://github.com/nfearnley/jambottle
    Tracker=https://github.com/nfearnley/jambottle/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
install_requires =
    appdirs==1.4.4
    arrow==0.17.0
    discord.py==1.5.1
    requests==2.24.0

[options.extras_require]
dev =
    autopep8==1.5.4
    flake8==3.8.4

[options.entry_points]
console_scripts =
    jambottle=jambottle.jambottle:run

[flake8]
ignore = E501
per-file-ignores =
    */__init__.py:F401,F403
